test/integration/bad/lang/incomplete6.stan
transformed data {
  print(foo[2.0]);
  real x = sars[while (0)];
}
